[tech] improved policy access protection
